[tool.poetry]
name = "bunker-frontend"
version = "0.1.0"
description = ""
authors = ["frozzzy1 <maleev.av@dclouds.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.13.1"
environs = "^11.0.0"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
